@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.14.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fix cursor jumping when editing some text-fields
 ---------------------------------------------------------------------------------------------------
 Version: 0.14.1
 Date: 2022-11-13
